# badge_system

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.debian  README.md  compose.yaml  extensions.cnf  gen_certificates.sh
badge/: .gitignore  Cargo.toml
badge-net-example/: Cargo.toml  rust-toolchain.toml
badge-net-example/src/: main.rs
badge/.cargo/: config.toml
badge/src/: main.rs  net.rs
badge_draw/: Cargo.toml
badge_draw/src/: lib.rs
badge_net/: Cargo.toml
badge_net/examples/: client.rs  from_tokio.rs
badge_net/src/: lib.rs
badge_net/tests/: integration.rs
basic_example/: Cargo.toml
basic_example/src/: lib.rs
certs/: CA_cert.crt  CA_cert.srl  CA_private.key  client.crt  client.csr  client.key  gen_certificates.sh  server.crt  server.csr  server.key
leptos-tutorial/src/: main.rs
nginx/: nginx.conf
server_net/: Cargo.toml  server.crt  server.key
server_net/examples/: simple_server.rs
site/pkg/: web-badge.css  web-badge.js
unsafetest/: Cargo.toml
unsafetest/src/: main.rs
web-badge/: Cargo.toml
web-badge/src/: app.rs  badge_channels.rs  badgeserver.rs  lib.rs  main.rs  websockets.rs
web-badge/style/: main.scss
websockets/: Cargo.toml
websockets/src/: from_tokio.rs  main.rs
