[workspace]
resolver = "2"
members = ["badge_draw", "badge_net", "run-wasm", "server_net", "web-badge", "websockets"]
exclude = ["badge", "basic-example"]

[patch.crates-io]
embedded-tls = { git = "https://github.com/drogue-iot/embedded-tls.git", rev = "f788e02deda787542a079cbddb5226af37aa818c" }

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
