[package]
name = "rust_badge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.3"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embassy-embedded-hal = "0.1.0"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "task-arena-size-32768"] }
embassy-futures = "0.1.1"
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = "0.5.0"
embassy-time = "0.3.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-text = "0.7.0"
#fugit = "0.3.7"
panic-probe = "0.3.1"
#pimoroni_badger2040 = { version = "0.6.0", default-features = false }
static_cell = "2.0.0"
#pimoroni_badger2040 = "0.6.0"
tinybmp = "0.5.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
uc8151 = "0.2.0"
cyw43-pio = "0.1.0"
cyw43 = "0.1.0"
embassy-net = { version = "0.4.0", features = ["dhcpv4", "tcp", "medium-ethernet", "udp"] }
embedded-io-async = "0.6.1"
format_no_std = "1.1.0"
pem = { version = "3.0.4", default-features = false }
embedded-alloc = "0.5.1"
embedded-tls = { version = "0.17.0", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
nanorand = { version = "0.7.0", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
badge_net = { version = "0.1.0", path = "../badge_net" }
badge_draw = { version = "0.1.0", path = "../badge_draw" }

[profile.release]
debug = 2
