[package]
name = "badge_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = "1.0.8"
serde = { version = "1.0.198", default-features = false, features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.82"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
