[package]
name = "websockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
embedded-io = "0.6.1"
embedded-io-adapters = { version = "0.6.1", features = ["std", "tokio-1"] }
embedded-io-async = "0.6.1"
embedded-tls = { version = "0.17.0", features = ["embedded-io-adapters", "webpki"] }
embedded-websocket = "0.9.3"
futures-core = "0.3.30"
pem-parser = "0.1.1"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
